# engineandgenerator3D

./: .gitignore  README.md
Engine/: CMakeLists.txt  engine.cpp
Generator/: bezier.cpp  bezier.h  box.cpp  box.h  cone.cpp  cone.h  sphere.cpp  sphere.h
Utilities/: camera.cpp  lights.cpp  mathmatrix.cpp  mathmatrix.h  models.cpp  point.cpp  points.cpp  rotation.cpp  scaling.cpp  transformation.cpp  translation.cpp  triangles.cpp
demo_scenes/: dynamic_solar_system.xml  dynamic_solar_system_all_planets.xml  dynamic_solar_system_only_comet.xml  lightned_snowman.xml  snow_man.xml  solar_system.xml  solar_system_spiral.xml  static_solar_system.xml  static_solar_system_spiral.xml  textured_solar_system_all_planets.xml  textured_solar_system_only_comet.xml
generator/: CMakeLists.txt  generate.cpp  plane.cpp  plane.h  writer.cpp  writer.h
primitives/: bezier.3d  box.3d  box_nt.3d  cone.3d  cone_nt.3d  plane.3d  plane_nt.3d  sphere.3d
src/: xml_syntax.xml
src/phase1/: plane.h  writer.cpp  writer.h
src/test_files_phase_1/: test_1_1.xml  test_1_2.xml  test_1_4.xml
test_files_phase_1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
test_files_phase_1-1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
test_files_phase_2/: test_2_1.xml
